# DZ_Input_Analyzer

./: .gitignore  estrutura.txt
backup manual/: CMakeLists.txt  dz-input-analyzer0.cpp  dz-input-analyzer2.cpp  dz-input-analyzer3.cpp  dz-input-analyzer_click_color_height.cpp  dz-input-analyzeraaa324.cpp
obs-studio/plugins/dz-input-analyzer/: dz-input-analyzer.cpp
